[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ryobigdopy"
version = "0.0.1"
authors = [
  { name="Chris Wood", email="CJOWood@users.noreply.github.com" },
]
description = "Library for communicating with Ryobi Garage Door Websocket and HTTP API."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CJOWood/ryobigdopy"
"Bug Tracker" = "https://github.com/CJOWood/ryobigdopy/issues"